# corgo-engine

./: .gitignore  BuildDevice.bat  BuildDeviceRelease.bat  BuildNMake.bat  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  TODO.md  UpdateSolutions.bat  crashcorg.py  generate_build_info.cmake
.github/: copilot-instructions.md
Source/: pdxinfo
scripts/: device-cmake.ps1
src/: build_info.h.in  main.c
src/ecs/: components.h  ecs.h  relationships.h  systems.h  types.h
src/ecs/core/: component.c  component.h  component_registry.c  config.h  context.h  core_components.c  core_components.h  core_relationships.h  core_systems.h  ecs.c  ecs_component.c  ecs_component.h  ecs_entity.c  ecs_entity.h  ecs_internal.c  ecs_internal.h  ecs_relationships.c  ecs_relationships.h  entity.c  entity.h  error.h  id.c  id.h  relationship.c  storage.c  storage.h  system.c  system.h  types.c
src/ecs/core/components/: debug_component.c
src/ecs/core/systems/: debug_system.c  test_systems.c
src/engine/: assets.h  components.h  config.h  corgo.h  input_actions.h  input_maps.h  relationships.h  scenes.h  shortcuts.h  systems.h
src/engine/asset_loaders/: playdate.c  stubs.c
src/engine/backends/: playdate.c
src/engine/components/: camera.c  camera.h  helpers.h  image.c  image.h  input.c  input.h  scene_graph.c  scene_graph.h  scene_script.c  scene_script.h  sprite.c  sprite.h  text_label.c  text_label.h  transform.c  transform.h
src/engine/core/: asset_cache.c  asset_cache.h  asset_loader.c  asset_loader.h  debug.c  debug.h  display.c  display.h  init.c  init.h  memory.c  memory.h  platform.c  platform.h  scene.h
src/engine/sample_input/: sample.c
src/engine/sample_scenes/: crank_demo.c  input_demo.c  sample_menu.c  scene_data.c  scene_data.h  sprite_demo.c  text_scroller.c  text_scroller2.c
src/engine/scenes/: text_scroller.c
src/engine/shortcuts/: input_map.h  scene.h
src/engine/systems/: debug.c  image.c  input.c  input_pd.c  input_stub.c  scene_script.c  text_label.c
src/game/: assets.h  components.h  input_actions.h  relationships.h  systems.h
src/tests/: core.c  ecs.c
src/utils/: bitset.c  bitset.h  error.c  error.h  helpers.h
